--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 variables:
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'dotnetapp-sc'
+    appType: 'webApp'
+    appName: 'dotnet1-webapp'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+    deploymentMethod: 'auto'
   buildConfiguration: 'Release'
 
 steps:
